Atualiza index.html

--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
 
         <div class="header-links hide-for-mobile">
           <a href="#">Home</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
+          <a href="#">Sobre</a>
+          <a href="#">Contato</a>
           <a href="#">Blog</a>
-          <a href="#">Careers</a>
+          <a href="#">Trabalhe Conosco</a>
         </div>
 
-        <a href="#" class="button hide-for-mobile">Request Invite</a>
+        <a href="#" class="button hide-for-mobile">Pedir Convite</a>
       </nav>
 
       <div class="header-menu fade-out">
         <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="#">Sobre</a>
+        <a href="#">Contato</a>
         <a href="#">Blog</a>
-        <a href="#">Careers</a>
+        <a href="#">Trabalhe Conosco</a>
       </div>
     </header>
 
@@ -59,13 +59,13 @@
           <div class="hero-image"></div>
 
           <div class="hero-text container-p">
-            <h1>Next generation digital banking</h1>
+            <h1>Um banco da nova geração</h1>
             <p>
-              Take your financial life online. Your EasyBank account will be a
-              one-stop-shop for spending, saving, budgeting, investing, and much
-              more.
+              Leve sua vida financeira a outro nível. Sua conta EasyBank será
+              sua central única para consumir, economizar, investir e muito
+              mais.
             </p>
-            <a href="#" class="button">Request Invite</a>
+            <a href="#" class="button">Pedir Convite</a>
           </div>
         </div>
       </section>
@@ -73,10 +73,11 @@
       <section class="features">
         <div class="feature-content container container-p">
           <div class="features-intro">
-            <h2>Why choose EasyBank?</h2>
+            <h2>Por que escolher EasyBank?</h2>
             <p>
-              We leverage Open Banking to turn your bank account into your
-              financial hub. Control your finances like never before.
+              Nós subimos o nível do Open Banking para transformar sua conta
+              bancária em um hub financeiro. Controle seus finanças como nunca
+              antes.
             </p>
           </div>
 
@@ -87,8 +88,8 @@
               </div>
               <div class="features-title">Online Banking</div>
               <div class="features-description">
-                Our modern web and mobile applications allow you to keep track
-                of your finances wherever you are in the world.
+                Nosso site e aplicativos mobile te permitem manter o controle de
+                suas finanças onde quer que você esteja no mundo.
               </div>
             </div>
 
@@ -96,10 +97,10 @@
               <div class="features-icon">
                 <img src="/images/icon-budgeting.svg" alt="" />
               </div>
-              <div class="features-title">Simple Budgeting</div>
+              <div class="features-title">Limite de Gastos</div>
               <div class="features-description">
-                See exactly where your money goes each month. Receive
-                notifications when you’re close to hitting your limits.
+                Veja exatamente onde seu dinheiro é gasto todo mês. Receba
+                notificações quando chegar perto de seu limite de gasto.
               </div>
             </div>
 
@@ -107,10 +108,10 @@
               <div class="features-icon">
                 <img src="/images/icon-onboarding.svg" alt="" />
               </div>
-              <div class="features-title">Fast Onboarding</div>
+              <div class="features-title">Sem Burocracia</div>
               <div class="features-description">
-                We don’t do branches. Open your account in minutes online and
-                start taking control of your finances right away.
+                Nós não enrolamos. Abra sua conta online em minutos e comece a
+                gerenciar suas finanças agora mesmo.
               </div>
             </div>
 
@@ -118,10 +119,10 @@
               <div class="features-icon">
                 <img src="/images/icon-api.svg" alt="" />
               </div>
-              <div class="features-title">Open API</div>
+              <div class="features-title">API Aberta</div>
               <div class="features-description">
-                Manage your savings, investments, pension, and much more from
-                one account. Tracking your money has never been easier.
+                Gerencie sua poupança, ações, investimentos e muito mais em uma
+                conta. Tomar conta de seu futuro nunca foi tão fácil.
               </div>
             </div>
           </div>
@@ -130,19 +131,19 @@
 
       <section class="articles">
         <div class="container container-p articles-content">
-          <h2>Latest Articles</h2>
+          <h2>Últimos Artigos</h2>
           <div class="articles-grid">
             <a href="#" class="articles-item" id="article-currency">
               <div class="articles-image"></div>
               <div class="articles-text">
-                <div class="articles-author">By Claire Robinson</div>
+                <div class="articles-author">Mônica Magalhães</div>
                 <div class="articles-title">
-                  Receive money in any currency with no fees
+                  Receba seu dinheiro em qualquer moeda sem taxas
                 </div>
                 <div class="articles-description">
-                  The world is getting smaller and we’re becoming more mobile.
-                  So why should you be forced to only receive money in a single
-                  …
+                  O mundo está ficando menor e estamos nos tornando mais móveis.
+                  Então porque você deveria ser forçado a receber seu dinheiro
+                  em uma única...
                 </div>
               </div>
             </a>
@@ -150,13 +151,14 @@
             <a href="#" class="articles-item" id="article-restaurant">
               <div class="articles-image"></div>
               <div class="articles-text">
-                <div class="articles-author">By Wilson Hutton</div>
+                <div class="articles-author">Valter Ventura</div>
                 <div class="articles-title">
-                  Treat yourself without worrying about money
+                  Divirta-se sem se preocupar com o amanhã
                 </div>
                 <div class="articles-description">
-                  Our simple budgeting feature allows you to separate out your
-                  spending and set realistic limits each month. That means you …
+                  Nossa funcionalidade incrível de limite de gastos te permite
+                  separar seus gastos por categoria e definir metas realistas
+                  para seu dinheiro. Isso significa...
                 </div>
               </div>
             </a>
@@ -164,14 +166,14 @@
             <a href="#" class="articles-item" id="article-plane">
               <div class="articles-image"></div>
               <div class="articles-text">
-                <div class="articles-author">By Wilson Hutton</div>
+                <div class="articles-author">Valter Ventura</div>
                 <div class="articles-title">
-                  Take your EasyBank card wherever you go
+                  Leve EasyBank pra onde quer que você vá
                 </div>
                 <div class="articles-description">
-                  We want you to enjoy your travels. This is why we don’t charge
-                  any fees on purchases while you’re abroad. We’ll even show you
-                  …
+                  Nós queremos que você curta sua viagem. Esse é o motivo pelo
+                  qual não cobramos taxas em compras internacionais. Nós te
+                  mostraremos como...
                 </div>
               </div>
             </a>
@@ -179,14 +181,14 @@
             <a href="#" class="articles-item" id="article-confetti">
               <div class="articles-image"></div>
               <div class="articles-text">
-                <div class="articles-author">By Claire Robinson</div>
+                <div class="articles-author">Mônica Magalhães</div>
                 <div class="articles-title">
-                  Our invite-only Beta accounts are now live!
+                  Nosso acesso Beta antecipado está no ar!
                 </div>
                 <div class="articles-description">
-                  After a lot of hard work by the whole team, we’re excited to
-                  launch our closed beta. It’s easy to request an invite through
-                  the site …
+                  Após muito trabalho duro do ime inteiro, estamos felizes em
+                  lançar nosso beta fechado. É fácil pedir um convite em nosso
+                  site...
                 </div>
               </div>
             </a>
@@ -218,23 +220,23 @@
         </div>
 
         <div class="footer-links col1">
-          <a href="#">About Us</a>
-          <a href="#">Contact</a>
+          <a href="#">Sobre Nós</a>
+          <a href="#">Contato</a>
           <a href="#">Blog</a>
         </div>
 
         <div class="footer-links col2">
-          <a href="#">Careers</a>
-          <a href="#">Support</a>
-          <a href="#">Privacy Policy</a>
+          <a href="#">Trabalhe Conosco</a>
+          <a href="#">Suporte</a>
+          <a href="#">Política de Privacidade</a>
         </div>
 
         <div class="footer-cta">
-          <a href="#" class="button">Request Invite</a>
+          <a href="#" class="button">Pedir Convite</a>
         </div>
 
         <div class="footer-copyright">
-          &copy; EasyBank. All Rights reserved.
+          &copy; EasyBank. Todos os direitos reservados.
         </div>
       </footer>
     </main>
